// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders default snapshot 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item"
  >
    <input
      id="checkbox-id-1"
      type="checkbox"
      value=""
    />
    <label
      for="checkbox-id-1"
    >
      foo
    </label>
    <svg
      class=""
      data-icon="check"
      data-icon-source="test"
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox > renders snapshot with all props 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item custom-classname"
    style="color: blue;"
  >
    <input
      checked=""
      disabled=""
      id="baz"
      type="checkbox"
      value="bar"
    />
    <label
      for="baz"
    >
      foo
    </label>
    <svg
      class=""
      data-icon="check"
      data-icon-source="test"
    />
  </div>
</DocumentFragment>
`;
